# WEBFaker

./: .editorconfig  .env  .env.devel.example  .gitignore  .prettierrc.js  Untitled.ipynb  jest.config.js  jsconfig.json  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js  webpack.mix.js
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
backend/: .gitignore  pyproject.toml
backend/api/v1/: accounts.py  serializers.py  urls.py
backend/fake/: asgi.py  custom.py  settings.py  urls.py  wsgi.py
backend/templates/: index.html
backend/test_manager/: apps.py  models.py  module_faker.py  module_fields.py  module_randoms.py  urls.py  views.py
backend/test_manager/api/v1/: serializers.py  urls.py
backend/test_manager/migrations/: 0001_initial.py  0002_remove_instances_users_instances_users.py  0003_rename_users_instances_user.py  0004_alter_instances_unique_together.py
fake/: custom.py  settings.py  urls.py
resources/js/: app.js  bootstrap.js
resources/react/: _nav.js  app.js  i18n.js  index.js
resources/react/components/: AppContent.js  AppHeader.js  AppSidebar.js  LanguageChange.js  Modal.js  ObjectDetail.js  WithRouter.js
resources/react/components/abstract/: Component.js  Form.js
resources/react/components/header/: AppHeaderDropdown.js
resources/react/components/object_form/: FieldGenerator.js  FormComponent.js  FormGenerator.js  InputFieldGenerator.js
resources/react/components/object_table/: CellGenerator.js  FilterGenerator.js  TableGenerator.js
resources/react/locales/: cz.json  ru.json
resources/react/models/: Instances.js  UserSettings.js  Users.js  index.js
resources/react/models/items/: columns.js  index.js  model.js
resources/react/pages/: Page404.js
resources/react/pages/cabinet/ApiTest/: InstanceDetail.js  Instances.js
resources/react/pages/cabinet/axios/: Axios.js
resources/react/pages/main/: ForgotPassword.js  Login.js  MainPage.js  Register.js
resources/react/routes/: cabinet_routes.js  index.js  utils.js
resources/react/service/: auth.js  axios.js  config.js  utils.js
resources/react/views/charts/: Charts.js
resources/react/views/dashboard/: Dashboard.js
resources/sass/: app.scss
(+46 files in other folders)
